--- a/GitTest/app/src/main/res/values/strings.xml
+++ b/GitTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">GitTest</string>
+    <string name="tab_home">首页</string>
+    <string name="tab_vidio">视频</string>
+    <string name="tab_attention">关注</string>
+    <string name="tab_mine">我的</string>
 </resources>
